<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/categories_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_date_title" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date_title" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/add_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_photo" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/add_record"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_record" />
</LinearLayout>