<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_from" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/from_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from_date_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_to" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/to_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_date_hint" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_ok" />
</LinearLayout>